Revert "Prevent clipping"
This reverts commit 2771c4a12253c3fc2a5e4ca93b0d37e13df08f56.

--- a/css/demo.css
+++ b/css/demo.css
@@ -741,11 +741,3 @@ a:focus {
     border-style: solid;
     margin: 10px;
 }
-
-.sticky {
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    z-index: 999;
-    background-color: #161519;
-}
